# soft-dtw-counterfactual-explanations

./: README.md  pyproject.toml
.github/workflows/: publish-website.yml
optuna_experimentsv2/CBF_optuna/checkpoints/: best_classifier.pt
optuna_experimentsv2/CBF_optuna/metadata/: classifier_optuna.db  evaluation_metadata.json  experiment_info.json  full_experiment_metadata.json
optuna_experimentsv2/CBF_optuna/results/: classifier_trials.csv  counterfactuals.npz  evaluation_metrics.json
optuna_experimentsv2/Coffee_optuna/checkpoints/: best_classifier.pt
optuna_experimentsv2/Coffee_optuna/metadata/: classifier_optuna.db  experiment_info.json  full_experiment_metadata.json
optuna_experimentsv2/Coffee_optuna/results/: classifier_trials.csv
optuna_experimentsv2/Cricket_optuna/checkpoints/: best_classifier.pt
optuna_experimentsv2/Cricket_optuna/metadata/: classifier_optuna.db  experiment_info.json  full_experiment_metadata.json
optuna_experimentsv2/Earthquakes_optuna/checkpoints/: best_classifier.pt
optuna_experimentsv2/Earthquakes_optuna/metadata/: classifier_optuna.db  experiment_info.json  full_experiment_metadata.json
optuna_experimentsv2/Earthquakes_optuna/results/: classifier_trials.csv
optuna_experimentsv2/Epilepsy_optuna/checkpoints/: best_classifier.pt
optuna_experimentsv2/Epilepsy_optuna/metadata/: classifier_optuna.db  (+2 more)
scripts/: create_uv_env.sh
src/soft_dtw_cfe/: __init__.py
website/: HOWTO.md  _quarto.yml  custom.scss  index.qmd  references.bib
website/_partials/: title-block.html
website/_site/: HOWTO.html  index.html
(+60 files in other folders)
