[project]
name = "soft-dtw-cfe"
version = "0.1.0"
description = "Time series counterfactual explanations using soft-dtw loss"
readme = "README.md"
authors = [
    { name = "Marcin Kostrzewa", email = "manik24901@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aeon>=1.3.0",
    "fastdtw>=0.3.4",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "optuna>=4.6.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "sktime>=0.40.1",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tslearn>=0.7.0",
    "wandb>=0.23.1",
    "wildboar>=1.2.1",
]
[project.scripts]
soft-dtw-cfe = "soft_dtw_cfe:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
